--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "dev:rn": "npm run build:rn -- --watch",
     "dev:qq": "npm run build:qq -- --watch",
     "dev:quickapp": "npm run build:quickapp -- --watch",
-    "mini": "npm run dev:weapp"
+    "mini": "npm run dev:weapp",
+    "test": "node test"
   },
   "author": "",
   "license": "MIT",
@@ -65,6 +66,7 @@
     "eslint-plugin-react": "^7.8.2",
     "eslint-plugin-react-hooks": "^1.6.1",
     "eslint-plugin-taro": "2.2.7",
+    "node-notifier": "^9.0.0",
     "stylelint": "^13.8.0",
     "stylelint-config-standard": "^20.0.0",
     "stylelint-config-taro-rn": "2.2.7",
